# Naive-KVDB

./: CMakeLists.txt  README.md  main.cc  replace.cc
inc/: bptree.hh  cmd.hh  database.hh  inverted_index.hh  read_xml.hh  topk.hh  util.hh
xml/: small.xml
